Fixed plate opacity for better readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,8 +23,8 @@ body {
     color: yellow;
     font-size: 100px;
     font-weight: bolder;
-    color: black;
-  /*-webkit-text-fill-color: yellow; /* Will override color (regardless of order) 
+   /* color: black;
+  -webkit-text-fill-color: yellow; /* Will override color (regardless of order) 
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black; */
 }
